# wunder

./: .env.example  .gitignore  .tmp_app_config.js  .tmp_headers_app_config.txt  .tmp_headers_echarts.txt  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.python  Dockerfile.rust  README-English.md  README.en.md  README.md  docker-compose-arm.yml  docker-compose-win.yml  docker-compose-x86.yml  docker-compose.arm.yml  docker-compose.python.yml  docker-compose.rust.arm.yml  docker-compose.rust.x86.yml  docker-compose.x86.yml  docker-compose.yml  package-lock.json  package.json  pytest.ini  requirements.txt  tauri.tmp.conf.json  temp_openclaw_weixin_readme.json
app/: asgi.py  (+2 more)
crates/wunder-cli/: Cargo.toml  args.rs  attachments.rs  command_session_display.rs  error_display.rs  input_guard.rs  locale.rs  main.rs  patch_diff.rs  path_display.rs  render.rs  runtime.rs  slash_command.rs  welcome_logo.rs  workspace_context.rs
crates/wunder-cli/config/: wunder.yaml
crates/wunder-cli/scripts/: build-win7-gnu.ps1
crates/wunder-cli/tests/: line_chat_smoke.rs
crates/wunder-cli/tui/: app.rs  frame_scheduler.rs  highlight.rs  line_utils.rs  markdown.rs  markdown_render.rs  markdown_stream.rs  mod.rs  scrollback.rs  theme.rs
crates/wunder-cli/tui/app/: helpers.rs  patch_log.rs
crates/wunder-cli/tui/ui/: composer.rs  layout.rs  modals.rs  status_line.rs  transcript.rs
crates/wunder-core/: Cargo.toml
crates/wunder-core/src/: approval.rs  atomic_write.rs  auth.rs  config.rs  drawio_config.rs  exec_policy.rs  i18n.rs  json_schema.rs  lib.rs  llm_speed.rs  path_utils.rs  repo_assets.rs  request_limits.rs  schemas.rs  storage_backend.rs  storage_constants.rs  storage_records.rs  token_utils.rs  tool_args.rs
crates/wunder-desktop/: Cargo.toml  README.md  build.rs  main.rs  runtime.rs  tauri.bundle.win7-skip-webview.json  tauri.conf.json
crates/wunder-desktop/scripts/: build-win7-gnu.ps1  build-win7.ps1
crates/wunder-runtime/: Cargo.toml
crates/wunder-runtime/src/: lib.rs  request_limits.rs
crates/wunder-runtime/src/api/: a2a.rs  admin.rs  admin_multimodal.rs  auth.rs  beeroom.rs  beeroom_reset.rs  beeroom_ws.rs  benchmark.rs  browser_control.rs  channel.rs  chat.rs  chat_goal.rs  chat_ws.rs  core.rs  core_ws.rs  desktop.rs  desktop_lan.rs  drawio.rs  errors.rs  external_workflows.rs  gateway_ws.rs  mod.rs  onlyoffice.rs  skill_fs.rs  team_runs.rs  temp_dir.rs  user_agents.rs  user_channel_logs.rs  user_context.rs  user_memory.rs  user_plaza.rs  user_prompt_templates.rs  user_tools.rs  user_world.rs  user_world_ws.rs  workspace.rs  ws_helpers.rs  ws_log.rs
crates/wunder-runtime/src/channels/: catalog.rs  feishu_files.rs  inbound_queue.rs  media.rs  mod.rs  outbox.rs  pending_files.rs  service.rs  types.rs  wechat.rs  wechat_mp.rs  weixin_files.rs  whatsapp_cloud.rs  workspace_routing.rs  xmpp.rs  xmpp_impl.rs  xmpp_tls_connector.rs
crates/wunder-runtime/src/core/: approval.rs  atomic_write.rs  auth.rs  blocking.rs  bounded_queue.rs  command_utils.rs  config.rs  config_store.rs  dpi.rs  drawio_config.rs  exec_policy.rs  i18n.rs  json_schema.rs  llm_speed.rs  long_task.rs  mod.rs  onlyoffice_config.rs  path_utils.rs  runtime_metrics.rs  runtime_tuning.rs  rustls_provider.rs  schemas.rs  state.rs  token_utils.rs  tool_args.rs
crates/wunder-runtime/src/gateway/: mod.rs
crates/wunder-runtime/src/ops/: mod.rs  monitor.rs  performance.rs  sysinfo_compat.rs  throughput.rs
crates/wunder-runtime/src/orchestrator/: config.rs  constants.rs  context.rs  error.rs  event_stream.rs  execute.rs  execute_support.rs  execute_tools.rs  limiter.rs  llm.rs  memory.rs  memory_compaction_window.rs  memory_support.rs  mod.rs  prompt.rs  request.rs  retry_governor.rs  stream_persist.rs  tool_calls.rs  tool_exec.rs  types.rs
crates/wunder-runtime/src/sandbox/: mod.rs  server.rs
crates/wunder-runtime/src/services/: agent_abilities.rs  agent_runtime_projection.rs  archive_extract.rs  attachment.rs  auth_sessions.rs  beeroom_cleanup.rs  beeroom_reset.rs  chat_cancel_marker.rs  chat_media.rs  chat_payload_sanitizer.rs  chat_transcript.rs  companions.rs  cron.rs  default_agent_sync.rs  desktop_lan.rs  desktop_runtime_recovery.rs  doc2md.rs  drawio.rs  history.rs  hive_pack.rs  knowledge.rs  llm.rs  mcp.rs  mcp_impl.rs  memory.rs  memory_agent_settings.rs  memory_auto_extract.rs  mod.rs  onlyoffice.rs  orchestration_context.rs  orchestration_run_control.rs  org_units.rs  output_quality.rs  preset_worker_cards.rs  prompting.rs  ragflow_knowledge.rs  sim_lab.rs  skills.rs  stream_events.rs  subagents.rs  (+12 more)
crates/wunder-runtime/src/storage/: backend.rs  bridge.rs  constants.rs  factory.rs  mod.rs  postgres.rs  records.rs  sqlite.rs
crates/wunder-runtime/tests/: admin_user_account_token_adjustment_routes.rs  admin_user_accounts_import_routes.rs  agent_model_routes.rs  auth_profile_routes.rs  backend_contracts.rs  channel_runtime_logs_routes.rs  context_overflow_recovery_regression.rs  cron_finish_job.rs  cron_lease.rs  cron_session_delete.rs  cron_tool.rs  gateway_regression.rs  inner_visible_agent_routes.rs  memory_routes.rs  session_goal_storage.rs  user_plaza_routes.rs
crates/wunder-server/: Cargo.toml
crates/wunder-server/src/: main.rs
desktop/tauri/: Cargo.toml  README.md  bridge.rs  build.rs  main.rs  runtime.rs  tauri.bundle.win7-x86.json  tauri.conf.json
desktop/tauri/capabilities/: default.json
desktop/tauri/scripts/: build-win7-gnu.ps1  build-win7.ps1
wunder-cli/: Cargo.toml  args.rs  attachments.rs  main.rs  path_display.rs  render.rs  runtime.rs  slash_command.rs  tool_display.rs  welcome_logo.rs
wunder-cli/tui/: activity_indicator.rs  app.rs  highlight.rs  markdown_render.rs  mod.rs  theme.rs  ui.rs  wrapping.rs
wunder-cli/tui/app/: commands.rs  helpers.rs  input_placeholders.rs  patch_log.rs  tests.rs
wunder-cli/tui/ui/: composer.rs  layout.rs  modals.rs  popup.rs  status_line.rs  transcript.rs
wunder-desktop/: Cargo.toml  README.md  args.rs  bridge.rs  bridge_main.rs  build.rs  main.rs  runtime.rs  tauri.conf.json
wunder-desktop/capabilities/: default.json
(+2677 files in other folders)
