[workspace]
members = [
  ".",
  "crates/wunder-core",
  "crates/wunder-server",
  "desktop/tauri",
  "wunder-cli",
]
default-members = ["crates/wunder-server"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
cron = "0.12"
crossterm = { version = "0.28", features = ["event-stream"] }
dashmap = "5"
deadpool-postgres = "0.14.1"
ed25519-dalek = "2.2"
encoding_rs = "0.8"
futures = "0.3"
globset = "0.4"
hickory-resolver = "0.24"
html2md = "0.2"
idna = "1.0"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
kuchiki = "0.8"
mime = "0.3"
parking_lot = "0.12"
pulldown-cmark = "0.10"
qrcode = "0.14"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
rmcp = { version = "0.12.0", default-features = false, features = [
  "auth",
  "base64",
  "client",
  "macros",
  "schemars",
  "server",
  "transport-streamable-http-client-reqwest",
  "transport-streamable-http-server",
] }
rusqlite = { version = "0.31", features = ["bundled"] }
rustls = { version = "0.23.36", default-features = false, features = ["std", "ring"] }
sasl = "0.5"
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
shell-words = "1"
sse-stream = "0.2.1"
syntect = "5"
sysinfo = "0.30"
tauri = { version = "2", features = ["wry"] }
tauri-build = { version = "2", features = ["codegen"] }
tauri-plugin-updater = "2"
tempfile = "3"
textwrap = "0.16.2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.15"
tokio-rustls = "0.26"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-xmpp = "4.0.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
unicode-width = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
walkdir = "2"
webpki-roots = "0.26"
zip = "0.6"
calamine = "0.25"
cfb = "0.10"
quick-xml = "0.31"
rlsx = "1.0.1"
aes = "0.8"
cbc = "0.1"
hex = "0.4"
hmac = "0.12"
md5 = "0.7"
pdf-extract = "0.10"
prost = "0.13"

[profile.dev]
# Rust 1.92 on Windows may produce unstable incremental artifacts in this repo.
# Disable incremental to keep local/CI diagnostics deterministic.
incremental = false

[profile.test]
# `cargo test` hit sporadic metadata/link failures with incremental enabled.
incremental = false

[package]
name = "wunder-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "wunder_server"
path = "src/lib.rs"

# Simulation binaries are used for local benchmarking only.
# Keep them out of `cargo test` target builds to avoid unnecessary
# Windows linker pressure in regular CI and developer validation loops.
[[bin]]
name = "backend_sim"
path = "src/bin/backend_sim.rs"
test = false
bench = false

[[bin]]
name = "swarm_sim"
path = "src/bin/swarm_sim.rs"
test = false
bench = false

[[bin]]
name = "swarm_flow_sim"
path = "src/bin/swarm_flow_sim.rs"
test = false
bench = false

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
dashmap.workspace = true
deadpool-postgres.workspace = true
ed25519-dalek.workspace = true
encoding_rs.workspace = true
futures.workspace = true
globset.workspace = true
hickory-resolver.workspace = true
html2md.workspace = true
idna.workspace = true
ignore.workspace = true
image.workspace = true
kuchiki.workspace = true
mime.workspace = true
parking_lot.workspace = true
pulldown-cmark.workspace = true
qrcode.workspace = true
regex.workspace = true
rmcp.workspace = true
rusqlite.workspace = true
rustls.workspace = true
sasl.workspace = true
scraper.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha1.workspace = true
sha2.workspace = true
shell-words.workspace = true
sse-stream.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tokio-xmpp.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
webpki-roots.workspace = true
wunder-core = { path = "crates/wunder-core" }
zip.workspace = true
calamine.workspace = true
cfb.workspace = true
quick-xml.workspace = true
rlsx.workspace = true
aes.workspace = true
cbc.workspace = true
hex.workspace = true
hmac.workspace = true
md5.workspace = true
pdf-extract.workspace = true
prost.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(target_vendor = "win7"))'.dependencies]
reqwest.workspace = true
sysinfo.workspace = true

[target.'cfg(target_vendor = "win7")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls-webpki-roots"] }
sysinfo = "0.29.11"

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true

[patch.crates-io]
tokio-xmpp = { path = "patches/tokio-xmpp" }
