[workspace]
members = [
  "crates/wunder-runtime",
  "crates/wunder-core",
  "crates/wunder-server",
  "crates/wunder-cli",
  "crates/wunder-desktop",
]
default-members = ["crates/wunder-server"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
cron = "0.12"
crossterm = { version = "0.28", features = ["event-stream"] }
dashmap = "5"
deadpool-postgres = "0.14.1"
ed25519-dalek = "2.2"
encoding_rs = "0.8"
futures = "0.3"
globset = "0.4"
hickory-resolver = "0.24"
html2md = "0.2"
idna = "1.0"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
kuchiki = "0.8"
mime = "0.3"
parking_lot = "0.12"
pulldown-cmark = "0.10"
qrcode = "0.14"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
regex = "1"
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
rmcp = { version = "2.0.0", default-features = false, features = [
  "auth",
  "base64",
  "client",
  "macros",
  "schemars",
  "server",
  "transport-streamable-http-client-reqwest",
  "transport-streamable-http-server",
] }
rusqlite = { version = "0.31", features = ["bundled"] }
rustls = { version = "0.23.36", default-features = false, features = ["std", "ring"] }
sasl = "0.5"
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
shell-words = "1"
sse-stream = "0.2.1"
syntect = "5"
sysinfo = "0.30"
tauri = { version = "2", features = ["wry"] }
tauri-build = { version = "2", features = ["codegen"] }
tauri-plugin-updater = "2"
tempfile = "3"
textwrap = "0.16.2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.15"
tokio-rustls = "0.26"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-xmpp = "4.0.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
unicode-width = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
walkdir = "2"
webpki-roots = "0.26"
zip = "0.6"
calamine = "0.25"
cfb = "0.10"
quick-xml = "0.31"
rlsx = "1.0.1"
aes = "0.8"
cbc = "0.1"
hex = "0.4"
hmac = "0.12"
md5 = "0.7"
pdf-extract = "0.10"
prost = "0.13"

[profile.dev]
# Rust 1.92 on Windows may produce unstable incremental artifacts in this repo.
# Disable incremental to keep local/CI diagnostics deterministic.
incremental = false

[profile.test]
# `cargo test` hit sporadic metadata/link failures with incremental enabled.
incremental = false

[patch.crates-io]
tokio-xmpp = { path = "patches/tokio-xmpp" }
