[package]
name = "wunder-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "wunder-cli"
path = "main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true
futures.workspace = true
image.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shell-words.workspace = true
syntect.workspace = true
textwrap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
zip.workspace = true
wunder-runtime = { path = ".." }
