[package]
name = "wunder-desktop"
version = "0.1.0"
edition = "2021"
default-run = "wunder-desktop"

[features]
default = []
desktop = []

[[bin]]
name = "wunder-desktop"
path = "../wunder-desktop/main.rs"

[dependencies]
wunder-server = { path = "..", package = "wunder-server" }
anyhow = "1"
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.2", features = ["wry"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
