[package]
name = "wunder-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "wunder_server"
path = "src/lib.rs"

[features]
default = []
desktop-control = ["dep:windows-sys"]
doc2md = ["dep:cfb", "dep:pdf-extract", "dep:rlsx"]
host-metrics = ["dep:sysinfo"]
mcp = ["dep:rmcp", "dep:sse-stream"]
postgres-storage = ["dep:deadpool-postgres", "dep:tokio-postgres"]
sim-bins = ["sqlite-storage"]
sqlite-storage = ["dep:rusqlite"]
web-fetch = ["dep:hickory-resolver", "dep:idna", "dep:kuchiki"]
xmpp = ["dep:hickory-resolver", "dep:idna", "dep:sasl", "dep:scraper", "dep:tokio-xmpp"]

# Simulation binaries are used for local benchmarking only.
# Keep them behind an explicit feature so regular workspace checks do not
# build local benchmark targets.
[[bin]]
name = "backend_sim"
path = "src/bin/backend_sim.rs"
required-features = ["sim-bins"]
test = false
bench = false

[[bin]]
name = "swarm_sim"
path = "src/bin/swarm_sim.rs"
required-features = ["sim-bins"]
test = false
bench = false

[[bin]]
name = "swarm_flow_sim"
path = "src/bin/swarm_flow_sim.rs"
required-features = ["sim-bins"]
test = false
bench = false

[[test]]
name = "admin_channel_accounts_routes"
required-features = ["sqlite-storage"]

[[test]]
name = "admin_org_units_import_routes"
required-features = ["sqlite-storage"]

[[test]]
name = "admin_user_account_token_adjustment_routes"
required-features = ["sqlite-storage"]

[[test]]
name = "admin_user_accounts_import_routes"
required-features = ["sqlite-storage"]

[[test]]
name = "agent_model_routes"
required-features = ["sqlite-storage"]

[[test]]
name = "auth_profile_routes"
required-features = ["sqlite-storage"]

[[test]]
name = "backend_contracts"
required-features = ["sqlite-storage"]

[[test]]
name = "channel_runtime_logs_routes"
required-features = ["sqlite-storage"]

[[test]]
name = "context_overflow_recovery_regression"
required-features = ["sqlite-storage"]

[[test]]
name = "cron_finish_job"
required-features = ["sqlite-storage"]

[[test]]
name = "cron_lease"
required-features = ["sqlite-storage"]

[[test]]
name = "cron_session_delete"
required-features = ["sqlite-storage"]

[[test]]
name = "cron_tool"
required-features = ["sqlite-storage"]

[[test]]
name = "gateway_regression"
required-features = ["sqlite-storage"]

[[test]]
name = "inner_visible_agent_routes"
required-features = ["sqlite-storage"]

[[test]]
name = "memory_routes"
required-features = ["sqlite-storage"]

[[test]]
name = "monitor_log_profile_regression"
required-features = ["sqlite-storage"]

[[test]]
name = "orchestration_state_routes"
required-features = ["sqlite-storage"]

[[test]]
name = "preset_agent_model_sync"
required-features = ["sqlite-storage"]

[[test]]
name = "qqbot_webhook_runtime_logs"
required-features = ["sqlite-storage"]

[[test]]
name = "session_goal_storage"
required-features = ["sqlite-storage"]

[[test]]
name = "user_plaza_routes"
required-features = ["sqlite-storage"]

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
dashmap.workspace = true
deadpool-postgres = { workspace = true, optional = true }
ed25519-dalek.workspace = true
encoding_rs.workspace = true
futures.workspace = true
globset.workspace = true
hickory-resolver = { workspace = true, optional = true }
html2md.workspace = true
idna = { workspace = true, optional = true }
ignore.workspace = true
image.workspace = true
kuchiki = { workspace = true, optional = true }
mime.workspace = true
parking_lot.workspace = true
pulldown-cmark.workspace = true
qrcode.workspace = true
regex.workspace = true
rmcp = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
rustls.workspace = true
sasl = { workspace = true, optional = true }
scraper = { workspace = true, optional = true }
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha1.workspace = true
sha2.workspace = true
shell-words.workspace = true
sse-stream = { workspace = true, optional = true }
tokio.workspace = true
tokio-postgres = { workspace = true, optional = true }
tokio-rustls.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tokio-xmpp = { workspace = true, optional = true }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
webpki-roots.workspace = true
wunder-core = { path = "../wunder-core" }
zip.workspace = true
calamine.workspace = true
cfb = { workspace = true, optional = true }
quick-xml.workspace = true
rlsx = { workspace = true, optional = true }
aes.workspace = true
cbc.workspace = true
hex.workspace = true
hmac.workspace = true
md5.workspace = true
pdf-extract = { workspace = true, optional = true }
prost.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
], optional = true }

[target.'cfg(not(target_vendor = "win7"))'.dependencies]
reqwest.workspace = true
sysinfo = { workspace = true, optional = true }

[target.'cfg(target_vendor = "win7")'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "multipart", "rustls-no-provider"] }
sysinfo = { version = "0.29.11", optional = true }

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
tower.workspace = true
