[package]
name = "wunder-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"
default-run = "wunder-desktop"

[features]
default = []
desktop = []

[[bin]]
name = "wunder-desktop"
path = "main.rs"

[[bin]]
name = "wunder-desktop-bridge"
path = "bridge_main.rs"
test = false
bench = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tauri.workspace = true
tauri-plugin-updater.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
wunder-runtime = { path = "../.." }

[build-dependencies]
tauri-build.workspace = true
